Changelog for mk-query-digest:

2011-03-12: version 0.9.27

   * --processlist did not work well (issue 1252).
   * Certain keywords were incorrectly distilled (issue 1176).

2011-02-09: version 0.9.26

   * --interval did not always work (issue 1186).
   * Added --run-time-mode option (issue 1150).
   * Added --variations option (issue 511).

2011-01-06: version 0.9.25

   * EXPLAIN sparklines sometimes didn't work or caused errors (issue 1196).
   * Item column in profile was incorrectly truncated to "It" (issue 1196).

2010-12-11: version 0.9.24

   * Added sparkline of --report-histogram (issue 1141).
   * Added EXPLAIN sparkline (issue 1141).

2010-11-08: version 0.9.23

   * Rearranged and regrouped query event output (issue 696).
   * Added variance-to-mean ratio (V/M) to output (issue 1124).
   * Added --apdex-threshold option and Apdex score to output (issue 1054).

2010-10-09: version 0.9.22

   * Added extended slowlog attribs to query review history table (issue 1149).

2010-09-11: version 0.9.21

   * Empty Schema attribute was not parsed correctly in some cases (issue 1104).
   * Added /*!50100 PARTITIONS*/ to EXPLAIN line (issue 1114).
   * Added hostname to --report-format (issue 1117).
   * Added MySQL error messages from tcpdump events (issue 670).

2010-08-01: version 0.9.20

   * --outliers did not work (issue 1087).
   * Profile did not show actual query ranks (issue 1087).
   * Made header and query_report outputs easier to read (issue 699).
   * Certain queries with subqueries were converted incorrectly (issue 347).

2010-07-01: version 0.9.19

   * Profile response time % did not match query pct (issue 1073).
   * Added --progress (169).
   * ORDER BY with ASC fingerprinted differently than without ASC (issue 1030).
   * Added MISC items to profile report (issue 1043).

2010-06-08: version 0.9.18

   * Connections did not preserve server SQL modes (issue 801).
   * Added percent of class count to string attribute values (issue 1026).
